fixed login modal error text from not disapearing on opening of modal

--- a/src/main/webapp/signup.xhtml
+++ b/src/main/webapp/signup.xhtml
@@ -62,7 +62,7 @@
                         <div class="form-group">
                             <div class="g-recaptcha" data-sitekey="#{signupbean.SITE_KEY}"></div>
                         </div>
-                        <h:commandButton id="btnSignUp" value="Submit" action="#{signupbean.signUpUser()}"/>
+                        <h:commandButton class="btn btn-success" id="btnSignUp" value="Submit" action="#{signupbean.signUpUser()}"/>
                     </h:form>
                 </div>
                 <div id="fillergrip" class="col-md-3 col-xs-0"></div>
